<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_sign"
    android:gravity="center"
    tools:context=".SignIn"
    >

    <AutoCompleteTextView
        android:id="@+id/signInUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signInPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_below="@+id/signInUser"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnsave"
        android:onClick="btnsaveonclick"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInPass"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login" />


    <TextView
        android:id="@+id/createAccTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsave"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:text="@string/dont_have_an_account_yet"
        android:onClick="CreateAccount"
        android:textColor="#fff00f"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textStyle="italic"/>
</RelativeLayout>