<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".CreateAccount"
        android:gravity="center"
        android:background="@drawable/pic_sign"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/signup_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textEmailAddress"
            android:autofillHints="" />
        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_below="@+id/signup_user"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/signup_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_below="@+id/signup_name"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textPassword"
            android:autofillHints="" />

        <EditText
            android:id="@+id/signuppass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_below="@+id/signup_pass"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button

            android:id="@+id/btn1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signuppass2"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:onClick="btn1Click"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:text="@string/create_account" />
        <TextView

           android:textColor="#fff00f"
            android:textSize="17dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="btnsigninclick"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/btn1"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:text="@string/already_registered" />




    </RelativeLayout>

</LinearLayout>